Refrigerator properties function item description updated.

--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -3261,7 +3261,7 @@
     "program_mode_default_desc": "هذا الوضع هو الوضع الافتراضي ولن يقوم بإجراء أي تغييرات على البرنامج الذي اخترته.",
     "program_mode_disinfection_desc": "وضع التجفيف بدرجة حرارة عالية، تجفيف إضافي. يقتل ما يصل إلى 99.99% من البكتيريا.",
     "program_mode_delicate_desc": "تحريك لطيف لمنع التآكل غير الضروري على الملابس.",
-    "bundling_detection_desc": "",
+    "bundling_detection_desc": "تساعد هذه الوظيفة في ضمان جفاف الملابس بالتساوي وتجنب الحاجة إلى التدخل اليدوي لفصل الملابس. بشكل افتراضي ، دائمًا مفعلة ولكن يمكن تعطيلها هنا.",
     "turn_on_bundling_detection": "تمكين/تعطيل الكشف عن التجميع",
     "wine_key": "مفتاح",
     "wine_modes": "أساليب",
@@ -3382,7 +3382,7 @@
     "wm_stain_program_type_temp": "",
     "wm_stain_program_desc": "حدد نوع البقعة والنسيج/درجة الحرارة أدناه. ستقوم الغسالة تلقائيًا باختيار البرنامج الأمثل.",
     "stain_type": "",
-    "fabric_temperature": "",
+    "fabric_temperature": "النسيج والحرارة",
     "high_water_level": "ارتفاع مستوى المياه",
     "small_load": "تحميل الصغيرة",
     "small_load_tips": "",
@@ -3390,10 +3390,10 @@
     "himit2_setup1": "تأكد من أن محول Himit قيد التشغيل، اضغط مع الاستمرار على زر إعادة الضبط لمدة 3 ثوانٍ حتى يومض ضوء WLAN.",
     "himit2_setup2": "",
     "choose_net_method": "اختر طريقة الشبكات",
-    "wifi": "",
-    "wired": "",
+    "wifi": "واي-فاي",
+    "wired": "متصل بالأسلاك",
     "appliance_been_found": "تم العثور على جهاز ، يرجى الاختيار \nالجهاز المراد إضافته.",
-    "wifi_id": "",
+    "wifi_id": "معرف الواي فاي:",
     "dw_remote_control_content": "",
     "dw_offline_title": "",
     "dw_offline_content1": "",
@@ -3403,13 +3403,13 @@
     "security_upgrade2_content": "",
     "article_number_not_valid": "رقم المقالة غير صالح",
     "auto_super_rinse": "شطف تلقائي فائق",
-    "auto_super_rinse_desc": "",
+    "auto_super_rinse_desc": "تساعد الوظيفة على التأكد من أن الملابس تتم تنظيفها بشكل شامل، دون ترك أي مواد تنظيف أو أوساخ متبقية خلفها.",
     "enable_auto_super_rinse": "",
     "dw_super_rinse": "شطف سوبر",
     "dw_uv_mode": "وضع الأشعة فوق البنفسجية",
     "dw_storage_mode": "",
     "air_shower": "دش الهواء",
-    "enable_air_shower": "",
+    "enable_air_shower": "تمكين/تعطيل دش الهواء",
     "air_shower_desc": "",
     "hum_safe_range": "يتراوح النطاق الآمن لتخزين زجاجات النبيذ على المدى الطويل بين 50% و80%. لن يؤثر انخفاض قصير في الرطوبة على الجودة. يمكن أن يحدث هذا عند فتح الباب.",
     "use_humidity": "استخدم صندوق الرطوبة لتنظيم الرطوبة",
@@ -3427,8 +3427,8 @@
     "tank_b_dosing_type_desc": "",
     "tank_a_dose_level_desc": "",
     "tank_b_dose_level_desc": "",
-    "program_auto_dose_desc": "",
-    "click_here": "",
+    "program_auto_dose_desc": "تم اختيار الجرعة التلقائية بشكل افتراضي لهذا البرنامج. يمكنك اختيار تشغيلها / إيقافها أدناه هذه الغسلة. إذا كنت ترغب في تغيير إعداداتك الافتراضية للجرعة التلقائية",
+    "click_here": "انقر هنا",
     "oven_hi8_setup_1": "",
     "oven_hi8_setup_2": "",
     "oven_hi8_setup_3": "شبكة الجهاز مفتوحة الآن للاتصال. \n انقر فوق \"التالي\" للمتابعة.",
@@ -3508,8 +3508,8 @@
     "have_added_x_inverters": "",
     "requst_qr_code_from_supplier": "",
     "have_qr_code": "",
-    "name_assignment_your_device": "",
-    "name_and_assign_to_room": "",
+    "name_assignment_your_device": "الاسم وتعيين جهازك",
+    "name_and_assign_to_room": "سمِّ جهازك وقم بتعيينه إلى غرفة.",
     "fridge_refr_dry_wet_room_sens_failure": "",
     "fridge_refr_var_room_sens_failure": "",
     "td_paused_tips": "التجفيف في xx متوقف مؤقتًا.",
@@ -3518,8 +3518,8 @@
     "tuya_device_bind_failed": "",
     "tuya_device_bind_more_than_8": "",
     "found_x_inverter": "",
-    "confirm_to_add_device": "",
-    "please_select_city_information": "",
+    "confirm_to_add_device": "يرجى التأكيد لإضافة الأجهزة إلى حسابك.",
+    "please_select_city_information": "الرجاء اختيار معلومات المدينة.",
     "clean_grease_filter": "",
     "clean_recirculation_filter_1": "",
     "clean_recirculation_filter_2": "",
@@ -3561,9 +3561,9 @@
     "system_add": "عنوان النظام",
     "blue_enable": "تمكين البلوتوث",
     "program_sent_to_oven": "",
-    "continue_on_the_device": "",
+    "continue_on_the_device": "تابع على الجهاز.",
     "start_the_program_and_insert_dish": "",
-    "browse_more_recipes": "",
+    "browse_more_recipes": "تصفح المزيد من الوصفات",
     "no_scheduling_set": "لم يتم ضبط جداول زمنية",
     "add_new": "إضافة جديد",
     "chef_recipe": "",
@@ -3571,33 +3571,33 @@
     "shopping_list": "قائمة التسوق",
     "scanned_code_not_recognized": "لم يتم التعرف على الرمز الممسوح ضوئيًا",
     "scan_correct_device_code": "مسح رمز الجهاز الصحيح",
-    "best_for": "",
+    "best_for": "الأفضل لـ ##",
     "cooking_steps": "",
-    "add_in_shopping_list": "",
+    "add_in_shopping_list": "أضف في قائمة التسوق",
     "blue_power_off_content_add_device": "يستخدم ConnectLife تقنية Bluetooth للعثور على الأجهزة القريبة والاتصال بها وتحديد موقعها.",
     "blue_power_off_title_add_device": "قم بتشغيل البلوتوث لهذا الجهاز",
     "blue_permission_off_title_add_device": "تم تعطيل تقنية Bluetooth في ConnectLife",
     "time_care_desc": "",
     "refr_exit_super_cool_tips": "",
     "refr_exit_super_freeze_tips": "",
-    "enter_recipe_name": "",
+    "enter_recipe_name": "أدخل اسم الوصفة...",
     "results": "",
     "no_favourite_recipes": "",
     "no_favourite_recipes_desc": "",
     "management": "",
-    "clear_all_favourites": "",
+    "clear_all_favourites": "امسح الكل من المفضلة",
     "dish_type": "",
-    "main_ingredients": "",
+    "main_ingredients": "المكونات الرئيسية",
     "diet": "",
-    "nutrition": "",
-    "wine_pairing": "",
+    "nutrition": "التغذية",
+    "wine_pairing": "توافق النبيذ",
     "start_end_tip": "“وقت البدء” و “وقت الانتهاء” لا يمكن أن يكونا متماثلين.",
     "filter_result_of": "",
     "asko_oven_language": "",
     "asko_oven_modes": "أساليب",
     "asko_oven_control": "",
     "asko_oven_show_date": "",
-    "previous": "",
+    "previous": "السابق",
     "allow": "يسمح",
     "dirty": "متسخ",
     "hide": "",
@@ -3631,9 +3631,9 @@
     "recipe_under_##_mins": "",
     "recipe_more_than_##_mins": "",
     "recipe_assistant_more_options": "",
-    "our_recommendation": "",
+    "our_recommendation": "توصيتنا",
     "no_search_results": "",
-    "let_us_try_another_word": "",
+    "let_us_try_another_word": "دعنا نجرب كلمة أخرى.",
     "no_device_search": "لم يتم البحث عن أي جهاز",
     "no_device_confirm": "يرجى تأكيد أن البوابة متصلة بشكل فعال بنظام تكييف الهواء",
     "cook_with_##": "",
@@ -3643,7 +3643,7 @@
     "asko_oven_time_date_automatic": "",
     "select_at_least_one_oven": "",
     "the_limit_has_been_reached": "",
-    "let_us_try_other_options": "",
+    "let_us_try_other_options": "دعنا نجرب بعض الخيارات الأخرى.",
     "found_##_search_results": "",
     "wm_program_mode_time_care_1_desc": "",
     "asko_oven_adaptive_brightness": "",
@@ -3852,7 +3852,7 @@
     "issue_general": "مواضيع عامة",
     "cl_app_ri_ac_tips": "يرجى الاتصال بفريق دعم العملاء في منطقتك.\n\nإذا كنت في الولايات المتحدة، يمكنك الاتصال بفريق دعم العملاء لدينا على الرقم 1-877-465-3566.\n\nبالنسبة للبلدان الأخرى، يرجى التحقق من المعلومات المقدمة في دليل مستخدم المنتجات.",
     "ri_select_address": "حدد العنوان المرتبط بهذا التقرير",
-    "hob_alarm_duration_setting_content": "",
+    "hob_alarm_duration_setting_content": "قم بتعيين مدة صوت التنبيه.",
     "hob_auto_pot_detection_settings": "",
     "hob_auto_pot_detection_settings_content": "",
     "hob_alarm_duration_settings": "",
@@ -3868,16 +3868,16 @@
     "hob_brightness_settings": "",
     "hob_brightness_settings_content": "",
     "extra_steam_card": "",
-    "clear_all_favorites_tips": "",
-    "canceling_drying": "",
-    "clear_all_search_history": "",
-    "clear_all_search_history_tips": "",
+    "clear_all_favorites_tips": "سوف تقوم هذه العملية بمسح جميع المفضلات.",
+    "canceling_drying": "إلغاء التجفيف",
+    "clear_all_search_history": "امسح كل سجل البحث",
+    "clear_all_search_history_tips": "سيؤدي هذا العمل إلى مسح كل سجل البحث.",
     "jch_connect_device_subtitle": "اتبع هذه الخطوات لتوصيل الجهاز بشبكة WiFi.",
     "jch_pair_new_connect_wifi_hint_wc": "اتصل بشبكة \"HIS-xxxx\" في إعدادات Wi-Fi بهاتفك الذكي.\n\nاخرج من التطبيق، وانتقل إلى إعدادات WiFi بهاتفك الذكي. اتصل بشبكة \"HIS-xxxx\" وارجع إلى التطبيق.",
     "jch_add_separated_ac_2": "اضغط على زر الرياح الأيسر والأيمن في @جهاز التحكم عن بعد# 6 مرات.\nأو اضغط على زر “Sleep” 8 مرات في @جهاز التحكم عن بعد السلكي#.",
     "rf_uv_tech": "تعقيم الأشعة فوق البنفسجية",
     "dimmer_des": "أطفئ الـ LED لتجنب إزعاج ضوء الـ LED لراحتك في الليل.",
-    "power_settings": "",
+    "power_settings": "إعدادات الطاقة",
     "water_tips": "ماء",
     "smart_energy_key": "الطاقة الذكية",
     "today_usage_key": "استخدام اليوم",
@@ -3910,15 +3910,15 @@
     "search_again_content": "ستؤدي إعادة البحث إلى تحديث عدد الأجهزة، ولن تكون وظيفة التحكم متاحة أثناء عملية إعادة البحث.",
     "select_at_least_one_device": "يرجى اختيار جهاز واحد على الأقل.",
     "ri_select_address_tips": "",
-    "default_address": "",
-    "other_addresses": "",
+    "default_address": "العنوان الافتراضي",
+    "other_addresses": "عناوين أخرى",
     "dhw_boost": "DHW Boost",
     "selected_all": "تحديد الكل",
     "set_temp_error": "لا يمكن تحقيق درجة الحرارة المحددة. يرجى تعديل درجة حرارة المجرى المائي.",
     "no_device_support_eco_key": "لا يوجد جهاز متاح، يرجى التأكد من أن أجهزتك متصلة وتدعم وضع ECO.",
     "appliance_disconnect_cannot_open_eco": "الجهاز غير متصل، يرجى التحقق مما إذا كانت شبكة الواي فاي والتحكم عن بعد مفعلة.",
     "power_on_remote_eabled_tips": "",
-    "power_on_tips": "",
+    "power_on_tips": "متاح فقط عندما يكون الجهاز مشغل.",
     "asko_oven_on_during_on": "",
     "restart": "",
     "how_data_calculate_tip": "استخدام الطاقة وتوفيرها هو تقديرات وليست قياسات دقيقة. \n\n تعتمد تقديراتنا على اختبارات خاضعة للرقابة، لذلك قد تختلف نتائجك الفعلية. \n\n يعتمد استخدام الطاقة في العالم الحقيقي على بيئتك وعاداتك المحددة. \n\n قد تختلف قراءات تطبيقنا عن عداد المرافق الخاص بك أو الأجهزة الأخرى.",
@@ -3930,7 +3930,7 @@
     "asko_oven_notification_sound_context": "",
     "asko_oven_notification_sound_pitch": "",
     "asko_oven_notification_sound_pitch_content": "",
-    "device_custom_name": "",
+    "device_custom_name": "اسم الجهاز المخصص",
     "energy_saved_tip_key": "الاستهلاك الفعلي: ## kWh تم التوفير: ** kWh",
     "asko_oven_egg_time": "",
     "wm86_and_td76_ui2_step1": "",
@@ -3998,7 +3998,7 @@
     "CL_SM_CM_devices_are_running_eco_mode_key": "## الأجهزة تعمل بوضع ECO",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "بناءً على وضع تشغيل الجهاز، قد لا يتم تنفيذ بعض الميزات بنجاح.",
-    "CL_DV_OV_g800_mode_grill_fan_micro": "",
+    "CL_DV_OV_g800_mode_grill_fan_micro": "شواية كبيرة + مروحة + ميكروويف",
     "CL_DV_OV_baking_stopped": "تم إيقاف الخبز في ##.",
     "CL_DV_OV_check_to_confirm": "افحص الفرن للتأكيد."
 }
