--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -3998,7 +3998,7 @@
     "CL_SM_CM_devices_are_running_eco_mode_key": "## دستگاه در حال اجرای حالت ECO هستند",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "بر اساس حالت عملکرد دستگاه، برخی از ویژگی ها ممکن است با موفقیت اجرا نشوند.",
-    "CL_DV_OV_g800_mode_grill_fan_micro": "",
+    "CL_DV_OV_g800_mode_grill_fan_micro": "گریل بزرگ + پنکه + مایکروفر",
     "CL_DV_OV_baking_stopped": "پخت در ## متوقف شد.",
     "CL_DV_OV_check_to_confirm": "برای تایید فر را چک کنید."
 }
