--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -3998,7 +3998,7 @@
     "CL_SM_CM_devices_are_running_eco_mode_key": "## מכשירים פועלים במצב ECO",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "בהתבסס על מצב ההפעלה של המכשיר, ייתכן שחלק מהתכונות לא יופעלו בהצלחה.",
-    "CL_DV_OV_g800_mode_grill_fan_micro": "",
+    "CL_DV_OV_g800_mode_grill_fan_micro": "גריל גדול + מאוורר + מיקרוגל",
     "CL_DV_OV_baking_stopped": "האפייה ב-## הופסקה.",
     "CL_DV_OV_check_to_confirm": "בדוק את התנור כדי לאשר."
 }
