--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -3998,7 +3998,7 @@
     "CL_SM_CM_devices_are_running_eco_mode_key": "## perangkat menjalankan mode ECO",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "Berdasarkan mode pengoperasian perangkat, beberapa fitur mungkin tidak berhasil dijalankan.",
-    "CL_DV_OV_g800_mode_grill_fan_micro": "",
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Pemanggang besar + Kipas + Microwave",
     "CL_DV_OV_baking_stopped": "Memanggang di ## dihentikan.",
     "CL_DV_OV_check_to_confirm": "Periksa oven untuk mengonfirmasi."
 }
