--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -3998,7 +3998,7 @@
     "CL_SM_CM_devices_are_running_eco_mode_key": "## 台のデバイスが ECO モードで動作しています",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "デバイスの動作モードによっては、一部の機能が正常に実行されない場合があります。",
-    "CL_DV_OV_g800_mode_grill_fan_micro": "",
+    "CL_DV_OV_g800_mode_grill_fan_micro": "大型グリル + 扇風機 + 電子レンジ",
     "CL_DV_OV_baking_stopped": "## でのベイク処理が停止されました。",
     "CL_DV_OV_check_to_confirm": "オーブンをチェックして確認してください。"
 }
