--- a/language/i18n_mk_MK.json
+++ b/language/i18n_mk_MK.json
@@ -3998,7 +3998,7 @@
     "CL_SM_CM_devices_are_running_eco_mode_key": "Уредите ## работат на режимот ЕКО",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "Врз основа на режимот на работа на уредот, некои функции може да не се извршат успешно.",
-    "CL_DV_OV_g800_mode_grill_fan_micro": "",
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Голема скара + Вентилатор + Микробранова печка",
     "CL_DV_OV_baking_stopped": "Печењето во ## беше прекинато.",
     "CL_DV_OV_check_to_confirm": "Проверете ја рерната за да потврдите."
 }
