--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -3998,7 +3998,7 @@
     "CL_SM_CM_devices_are_running_eco_mode_key": "## thiết bị đang chạy chế độ ECO",
     "CL_CF_UC_full_name_with_title": "{title} {firstName} {surName}",
     "CL_AU_AC_automation_features_may_not_execute_key": "Dựa trên chế độ hoạt động của thiết bị, một số tính năng có thể không được thực thi thành công.",
-    "CL_DV_OV_g800_mode_grill_fan_micro": "",
+    "CL_DV_OV_g800_mode_grill_fan_micro": "Lò nướng lớn + Quạt + Lò vi sóng",
     "CL_DV_OV_baking_stopped": "Quá trình nướng ở ## đã dừng lại.",
     "CL_DV_OV_check_to_confirm": "Kiểm tra lò để xác nhận."
 }
