upload latest change

--- a/language/i18n_sr_BA.json
+++ b/language/i18n_sr_BA.json
@@ -3646,55 +3646,55 @@
     "let_us_try_other_options": "",
     "found_##_search_results": "",
     "wm_program_mode_time_care_1_desc": "",
-    "asko_oven_adaptive_brightness": "",
-    "online_tip": "онлајн",
+    "asko_oven_adaptive_brightness": "Прилагодљива осветљеност",
+    "online_tip": "на мрежи",
     "atw_tip": "АТВ",
-    "close_all": "Затвори Све",
-    "circle_mode_des": "Режим рада канала 1 и канала 2 је исти",
-    "select_c_m": "Izaberite Tip Kola",
-    "favorite_name": "Омиљено Име",
-    "weekly_key": "Недељно",
-    "all_day": "ceo dan",
-    "asko_oven_display_setting_content": "",
-    "asko_oven_brightness_content": "",
-    "asko_oven_display_content": "Podesite veličinu fonta za tekst na displeju vina.",
-    "asko_oven_show_date_content": "",
-    "asko_oven_show_bg_content": "",
-    "asko_oven_light_setting_content": "",
-    "asko_oven_stage_light_content": "",
-    "asko_oven_stage_light": "",
-    "asko_oven_color_temperature": "",
-    "asko_oven_color_temperature_content": "",
-    "asko_oven_brightness_light_content": "",
-    "asko_oven_time_out_content": "",
-    "asko_oven_control_settings": "",
-    "asko_oven_control_setting_content": "Podesite osvetljenost ekrana vašeg uređaja, promenite temu boje, veličinu fonta i podesite kada ekran vašeg uređaja prelazi u režim pripravnosti.",
-    "asko_oven_camera_content": "",
+    "close_all": "затвори све",
+    "circle_mode_des": "Циклус 1 и циклус 2 деке исти режим рада.",
+    "select_c_m": "ОДАБЕРИТЕ РЕЖИМ ЦИКЛУСА",
+    "favorite_name": "Омиљено име",
+    "weekly_key": "недељно",
+    "all_day": "цео дан",
+    "asko_oven_display_setting_content": "Конфигуришите подешавања за дисплеј ваше рерне.",
+    "asko_oven_brightness_content": "Осветљеност дисплеја рерне и тастера аутоматски се подешава у зависности од осветљености просторије.",
+    "asko_oven_display_content": "Подесите величину фонтa за текст на дисплеју рерне.",
+    "asko_oven_show_date_content": "Приказивање датума на екрану са сатом или не.",
+    "asko_oven_show_bg_content": "Приказивање позадине на екрану или не.",
+    "asko_oven_light_setting_content": "Подесите температуру боје, интензитет и време трајања светала по вашем избору.",
+    "asko_oven_stage_light_content": "Осветљење испод контролне табле рерне за осветљавање јела док га вадите из рерне.",
+    "asko_oven_stage_light": "Сценско светло",
+    "asko_oven_color_temperature": "ТЕМПЕРАТУРА БОЈЕ",
+    "asko_oven_color_temperature_content": "Подесите температуру боје светала у унутрашњости.",
+    "asko_oven_brightness_light_content": "Подесите осветљеност светала у унутрашњости.",
+    "asko_oven_time_out_content": "Подесите колико дуго би светла у унутрашњости требало да остану укључена након активације.",
+    "asko_oven_control_settings": "Подешавања контроле",
+    "asko_oven_control_setting_content": "Конфигуришите подешавања за различите функције унутар ваше рерне.",
+    "asko_oven_camera_content": "Користећи камеру, можете пратити вашу посуду без отварања врата.",
     "asko_oven_proximity_sensor": "Сензор близине",
-    "asko_oven_proximity_sensor_content": "",
-    "asko_oven_distant_user_detected": "",
-    "asko_oven_display_change_to": "Prikazuje promene na",
-    "asko_oven_light_change_to": "Svetla se menjaju u",
+    "asko_oven_proximity_sensor_content": "Када се детектује кретање у близини рерне, светло и екран се понашају у складу са вашим подешавањима испод.",
+    "asko_oven_distant_user_detected": "ДЕТЕКТОВАН УДАЉЕНИ КОРИСНИК",
+    "asko_oven_display_change_to": "Приказ се мења на",
+    "asko_oven_light_change_to": "Светла се мењају у",
     "asko_oven_door_sensor_wake_up": "",
-    "asko_oven_door_sensor_wake_up_content": "",
+    "asko_oven_door_sensor_wake_up_content": "Пећница се може пробудити ако сензор близине детектује ваше присуство и приликом отварања врата. Имајте на уму да ће ово повећати потрошњу енергије.",
     "asko_oven_brand_splash": "",
-    "asko_oven_brand_splash_content": "",
-    "jchoem_privacy_desc": "",
-    "asko_oven_inactivity_time_out": "",
-    "asko_oven_inactivity_time_out_content": "",
-    "asko_oven_duration_of_clock": "",
-    "asko_oven_duration_of_clock_content": "",
-    "dw_dish_assist": "Pomoć za pranje sudova",
-    "dw_help_support": "Pomoć&Podrška",
-    "dryer_link": "Veza za sušenje",
-    "dryer_link_tips": "Sa omogućenom funkcijom Drider Lint, vaš program pranja se automatski prenosi u izabranu mašinu za sušenje veša nakon što je pranje završeno.",
-    "enable_on_this_appliance": "Omogućite na ovom uređaju",
-    "dryer_link_notes": "Da biste povezali svoju mašinu za pranje veša i mašinu za sušenje veša, uverite se da je veza podešena na vašoj mašini za sušenje veša.",
-    "asko_oven_mode_setting_content": "",
-    "steam_disinfection": "",
-    "asko_oven_light_brightness": "",
-    "asko_oven_sound_alarms": "",
-    "asko_oven_eco_mode_content": "Pomaže u smanjenju potrošnje energije i štedi električnu energiju. Uređaj će nastaviti da radi, dok će dodatne funkcije kao što su svetlo, displej, senzor blizine i vrata biti onemogućene.",
+    "asko_oven_brand_splash_content": "Прикажите видео снимак бренда током покретања и искључивања.",
+    "jchoem_privacy_desc": "Молимо вас да имате у виду да компанија Johnson Controls не управља нити контролише ову апликацију. Ваши подаци ће бити обрађивани у складу са Политиком приватности треће стране, која ће бити приказана на следећем екрану.",
+    "asko_oven_inactivity_time_out": "ВРЕМЕ НЕАКТИВНОСТИ",
+    "asko_oven_inactivity_time_out_content": "Подесите након колико минута ће уређај прећи на екран са сатом.",
+    "asko_oven_duration_of_clock": "ДУЖИНА ТРАЈАЊА САТА",
+    "asko_oven_duration_of_clock_content": "Подесите колико дуго ће екран сата бити видљив.",
+    "dw_dish_assist": "Помоћ при прању судова",
+    "dw_help_support": "Помоћ и подршка",
+    "dryer_link": "Повезивање сушилице",
+    "dryer_link_tips": "Са укљученом функцијом повезивање сушилице, ваш програм прања се аутоматски преноси на изабрану машину за сушење веша након што је прање завршено.",
+    "enable_on_this_appliance": "Омогући на овом уређају",
+    "dryer_link_notes": "Да бисте повезали своју машину за прање веша и машину за сушење веша, уверите се да је веза подешена на вашој машини за сушење веша.",
+    "asko_oven_mode_setting_content": "Посебни режими се могу подесити за различите прилике. Конфигуришите за сваки режим како треба да се понаша када је режим активан.",
+    "steam_disinfection": "Дезинфекција паром",
+    "asko_oven_light_brightness": "Јачина осветљења",
+    "asko_oven_sound_alarms": "Звукови / Аларми",
+    "asko_oven_eco_mode_content": "Помаже у смањењу потрошње енергије и штеди електричну енергију. Уређај ће наставити да ради, док ће додатне функције као што су светло, дисплеј, сензор близине и врата бити онемогућене.",
     "dw_error_desc_f11": "Излаз воде",
     "dw_error_desc_f12": "Улаз воде",
     "dw_error_desc_f40": "Улазни вентил",
@@ -3703,37 +3703,37 @@
     "dw_error_desc_f43": "Сензор за притисак",
     "dw_error_desc_f54": "Прелив воде",
     "dw_error_desc_f56": "Циркулација",
-    "dw_error_desc_f65": "Дисплејска табла",
-    "asko_oven_sabbath_mode_content": "",
-    "asko_oven_activate_weekly": "",
-    "asko_oven_sabbath_bottom_content": "",
-    "asko_oven_during_sabbath_mode": "",
-    "asko_oven_during_sabbath_mode_content": "",
-    "asko_oven_program": "",
-    "asko_oven_program_setup": "",
-    "asko_oven_start_oven_program": "",
-    "asko_oven_stop_oven_program": "",
-    "asko_oven_sound_setting_content": "",
-    "asko_oven_ambient_sounds": "",
-    "asko_oven_ambient_sounds_content": "",
-    "asko_oven_navigation_content": "",
+    "dw_error_desc_f65": "Дисплеј табла",
+    "asko_oven_sabbath_mode_content": "Уређај ће прећи у Сабат режим у подешеном датуму, времену и трајању. Функција закључавања биће искључена током Сабат режима.",
+    "asko_oven_activate_weekly": "Активирајте недељно",
+    "asko_oven_sabbath_bottom_content": "Да бисте деактивирали Сабат режим, притисните и држите иконцу закључавања на дисплеју рерне 3 секунде.",
+    "asko_oven_during_sabbath_mode": "ТОКОМ САБАТ РЕЖИМА",
+    "asko_oven_during_sabbath_mode_content": "Током Сабат режима постоји могућност аутоматског покретања и заустављања програма кувања.",
+    "asko_oven_program": "Програм рерне",
+    "asko_oven_program_setup": "Подешавање програма",
+    "asko_oven_start_oven_program": "Покрените програм рерне",
+    "asko_oven_stop_oven_program": "Зауставите програм рерне",
+    "asko_oven_sound_setting_content": "Подесите јачину и различите звукове за своју пећницу.",
+    "asko_oven_ambient_sounds": "АМБИЈЕНТАЛНИ ЗВУКОВИ",
+    "asko_oven_ambient_sounds_content": "На пример, покретање и заустављање програма.",
+    "asko_oven_navigation_content": "На пример, звукови тастера.",
     "dw_smart_dry": "Паметно сушење",
     "dw_remote_guide_hx": "Притисните # а затим @. АПП ће трептати на екрану.",
-    "dw_remote_guide_eu": "Притисните дугме% на контролној табли да бисте га омогућили.",
-    "atw_no_device_confirm_first": "",
-    "atw_no_device_confirm_second": "",
-    "voice_assistant_commands": "Команде гласовног помоћника",
-    "edit_favorites": "Uredi omiljene",
-    "dom_hot_water": "Topla voda",
-    "delete_all_schedu_tips": "Da li ste sigurni da želite izbrisati sve rasporede?",
-    "edit_scheduling": "Uredi raspored",
+    "dw_remote_guide_eu": "Притисните дугме% на контролној табли да бисте омогућили",
+    "atw_no_device_confirm_first": "1. Молимо вас да обезбедите стабилност мреже.",
+    "atw_no_device_confirm_second": "2. Молимо вас да обезбедите поузданост повезивања система за климатизацију.",
+    "voice_assistant_commands": "Команде за гласовног асистента",
+    "edit_favorites": "Уреди омиљене",
+    "dom_hot_water": "ВРУЋА ВОДА У ДОМАЋИНСТВУ",
+    "delete_all_schedu_tips": "Да ли сте сигурни да желите да избришете све распореде?",
+    "edit_scheduling": "Уреди распоред",
     "target_key": "мета",
-    "asko_oven_factory_reset_content": "Aparat se može vratiti na fabrička podešavanja.",
-    "invalid_input": "",
-    "key": "Serbian 塞尔维亚语",
+    "asko_oven_factory_reset_content": "Апарат се може вратити на фабричка подешавања. Сва лична подешавања и сачувани подаци биће изгубљени.",
+    "invalid_input": "Неисправан унос.",
+    "key": "Eнглески",
     "filename": "i18n_sr-BA.json",
-    "asko_td_eco_cotton": "EKO pamuk",
-    "asko_td_eco_cotton_us": "Standardno",
+    "asko_td_eco_cotton": "ECO памук",
+    "asko_td_eco_cotton_us": "Уобичајено",
     "asko_td_storage_dry_cotton": "Osušen pamučni veš spreman za odlaganje u ormar",
     "asko_iron_dry_cotton": "Pamučni veš vlažan za peglanje",
     "asko_td_mixed_laundry": "Мешовити веш",
