Change the content of auto_manual_triggered_tips key

--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -109,7 +109,7 @@
     "auto_action": "الإجراء",
     "auto_trigger_lowercase": "المشغل",
     "auto_manual_triggered": "تم التشغيل يدويًا",
-    "auto_manual_triggered_tips": "قم بتشغيل المشهد يدويًا",
+    "auto_manual_triggered_tips": "قم بتشغيل الروتين يدويًا",
     "auto_time_base": "حسب الوقت",
     "auto_time_base_trips": "مثل: كل يوم الساعة12:00",
     "auto_appliance_status": "حالة الجهاز",
