--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -109,7 +109,7 @@
     "auto_action": "ČINNOST",
     "auto_trigger_lowercase": "Spínač",
     "auto_manual_triggered": "Ručně spuštěno",
-    "auto_manual_triggered_tips": "Zapněte scénu ručně",
+    "auto_manual_triggered_tips": "Zapněte rutinu ručně",
     "auto_time_base": "Časově založené",
     "auto_time_base_trips": "Příklad: Každý den ve 12:00",
     "auto_appliance_status": "Stav spotřebiče",
