--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -109,7 +109,7 @@
     "auto_action": "اقدام",
     "auto_trigger_lowercase": "راه‌اندازی کنید",
     "auto_manual_triggered": "به‌صورت دستی راه‌اندازی شد",
-    "auto_manual_triggered_tips": "صحنه را به صورت دستی دکمه روشن کنید",
+    "auto_manual_triggered_tips": "روال را به صورت دستی روشن کنید",
     "auto_time_base": "بر اساس زمان",
     "auto_time_base_trips": "مثال: 12:00 ظهر هر روز",
     "auto_appliance_status": "وضعیت محصول",
