--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -109,7 +109,7 @@
     "auto_action": "פעולה",
     "auto_trigger_lowercase": "תנאי הפעלה",
     "auto_manual_triggered": "הפעלה ידנית",
-    "auto_manual_triggered_tips": "הדלק את הסצנה ידנית",
+    "auto_manual_triggered_tips": "הפעל את השגרה באופן ידני",
     "auto_time_base": "מבוסס על זמן",
     "auto_time_base_trips": "לדוגמה: כל יום ב-12:00",
     "auto_appliance_status": "מצב המכשיר",
