--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -109,7 +109,7 @@
     "auto_action": "कार्रवाई",
     "auto_trigger_lowercase": "संचालित",
     "auto_manual_triggered": "मैन्युअल रूप से संचालित किया गया",
-    "auto_manual_triggered_tips": "सीन को मैन्युअल रूप से चालू करें",
+    "auto_manual_triggered_tips": "रूटीन को मैन्युअल रूप से चालू करें",
     "auto_time_base": "समय आधारित",
     "auto_time_base_trips": "उदाहरण: रोज़ाना 12:00 बजे",
     "auto_appliance_status": "उपकरण की स्थिति",
