--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -109,7 +109,7 @@
     "auto_action": "ӘРЕКЕТ",
     "auto_trigger_lowercase": "Іске қосқыш",
     "auto_manual_triggered": "Қолмен іске қосылды",
-    "auto_manual_triggered_tips": "Сахнаны қолмен қосу",
+    "auto_manual_triggered_tips": "Режимді қолмен қосыңыз",
     "auto_time_base": "Уақытқа негізделген",
     "auto_time_base_trips": "Мысал: күнделікті 12:00-де",
     "auto_appliance_status": "Құрылғы күйі",
