--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -109,7 +109,7 @@
     "auto_action": "HANDLING",
     "auto_trigger_lowercase": "Trigger",
     "auto_manual_triggered": "Manuell trigger",
-    "auto_manual_triggered_tips": "Slå på scenen manuelt",
+    "auto_manual_triggered_tips": "Slå på rutinen manuelt",
     "auto_time_base": "Tidsbasert",
     "auto_time_base_trips": "Eksempel: hver dag kl. 12:00",
     "auto_appliance_status": "Enhetsstatus",
