--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -109,7 +109,7 @@
     "auto_action": "ACȚIUNE",
     "auto_trigger_lowercase": "Declanșator",
     "auto_manual_triggered": "Declanșat manual",
-    "auto_manual_triggered_tips": "Porniți scena manual",
+    "auto_manual_triggered_tips": "Porniți manual rutina",
     "auto_time_base": "Pe bază de oră",
     "auto_time_base_trips": "Exemplu: în fiecare zi la 12:00",
     "auto_appliance_status": "Starea aparatului",
