--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -109,7 +109,7 @@
     "auto_action": "DEJANJE",
     "auto_trigger_lowercase": "Sprožilec",
     "auto_manual_triggered": "Ročno sproženo",
-    "auto_manual_triggered_tips": "Ročno vklopite sceno",
+    "auto_manual_triggered_tips": "Ročno vklopite rutino",
     "auto_time_base": "Časovno odvisno",
     "auto_time_base_trips": "Primer: Vsak dan ob 12:00",
     "auto_appliance_status": "Status aparata",
@@ -3084,11 +3084,11 @@
     "dishwashing_assist": "Pomočnik za pomivanje posode",
     "load": "Obremenitev",
     "change_load_level_tips": "Prilagodite stopnjo obremenitve količini naložene naprave, da prihranite energijo.",
-    "passed": "prezreto",
+    "passed": "opravili",
     "scan_again": "skeniraj ponovno",
     "last_scanned": "Nazadnje skenirano",
     "energy_used": "Porabljena energija",
-    "dw_statistics_desc": "Te statistični podatki temeljijo na statistiki omrežja, del podatkov pa temelji na laboratorijskih pogojih merjenja, le za uporabo uporabnikov.",
+    "dw_statistics_desc": "Ti statistični podatki temeljijo na statistiki omrežja, del podatkov pa na izmerjenih laboratorijskih pogojih, ki so uporabniku na voljo le za referenco.",
     "total_cycles": "Skupno število ciklov",
     "dw_error_f56": "Napaka cirkulacije.",
     "washer_dishes_stop": "Pomivanje posode se je ustavilo",
