--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -109,7 +109,7 @@
     "auto_action": "ÅTGÄRD",
     "auto_trigger_lowercase": "Trigger",
     "auto_manual_triggered": "Manuellt triggad",
-    "auto_manual_triggered_tips": "Slå på scenen manuellt",
+    "auto_manual_triggered_tips": "Slå på rutinen manuellt",
     "auto_time_base": "Tidsbaserad",
     "auto_time_base_trips": "Exempel:Dagligen vid 12:00",
     "auto_appliance_status": "Produktstatus",
