--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -109,7 +109,7 @@
     "auto_action": "การทำงาน",
     "auto_trigger_lowercase": "ทริกเกอร์",
     "auto_manual_triggered": "ทริกเกอร์ด้วยตนเอง",
-    "auto_manual_triggered_tips": "เปิดฉากด้วยตนเอง",
+    "auto_manual_triggered_tips": "เปิดใช้งานรูทีนด้วยตนเอง",
     "auto_time_base": "ตามเวลา",
     "auto_time_base_trips": "ตัวอย่าง: ทุกวันเวลา 12:00 น",
     "auto_appliance_status": "สถานะอุปกรณ์",
