--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -109,7 +109,7 @@
     "auto_action": "THAO TÁC",
     "auto_trigger_lowercase": "Trình kích hoạt",
     "auto_manual_triggered": "Được kích hoạt thủ công",
-    "auto_manual_triggered_tips": "Bật cảnh bằng tay",
+    "auto_manual_triggered_tips": "Bật thói quen theo cách thủ công",
     "auto_time_base": "Dựa trên thời gian",
     "auto_time_base_trips": "Ví dụ: 12:00 giờ trưa mỗi ngày",
     "auto_appliance_status": "Trạng thái thiết bị",
