--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -109,7 +109,7 @@
     "auto_action": "TINDAKAN",
     "auto_trigger_lowercase": "Pencetus",
     "auto_manual_triggered": "Cetus secara manual",
-    "auto_manual_triggered_tips": "Hidupkan adegan secara manual",
+    "auto_manual_triggered_tips": "Hidupkan rutin secara manual",
     "auto_time_base": "Berdasarkan masa",
     "auto_time_base_trips": "Contoh: Pukul 12:00 setiap hari",
     "auto_appliance_status": "Status peralatan",
